crates/swc_ecma_parser/tests/test262-error-references/fail/b61406dafcaab4b7.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/b61406dafcaab4b7.js:1:6
  |
1 | ('\x0')
  |      ^^

